# awstools

./: .gitignore  Cargo.toml  README.md
iam-policy-detector/: Cargo.toml
src/: logger.rs  main.rs
